0.5.4 - "catnap"

* Workaround for Chatzilla. Thanks to Oliver Eikemeier and James Ross.


0.5.3 - "hairball"

* Automatically generated logfilenames are now always in lower case.

* miau now leaves channels (if configured to do so) when client times out and
  when client dropped connection.
  
* After timeouted connect, miau no longer freezes until send() times out.
  How did I do this - after adding the timer?-)

* miau no longer joins channels defined in miaurc at start-up if
  rejoin and leave are set to false.

* Only one error message after connecting timed out.

* No more skipping one server after connecting timed out.

* Fixed handling of event-messages when "leave" is set to true.

* Fixed memory-leak in chanlog_open(...). This occured only if global logtype
  failed to open logfile for writing.

* Fixed proceed_timer_safe -- it was possible to make it never trigger return
  code 2.

* Fixed bug that caused miau to free i_server.isupport[n] twice.

* Lots of portability-cleanup (strict typecasting, got rid of (most?)
  "if (foo)"s etc.)

* Installing miau locally no longer overwrites old config.

* miau-rotatelog was removed from distribution package.

* miau-check now uses locally installed miau by default.


0.5.2 - "fluffy little fellow"

* Fixed a bug that caused miau to segfault on rehash if bind was defined while
  listenhost was not.

* Message for dropping new client no longer contains garbage. Funny thing that
  neither valgrind nor electric fence caught this.

* Rehashing now complains about all missing and required items.

* Implemented timestamping for quicklog events (QLOGSTAMP).
  Option in miaurc: "timestamp", defines location of timestamp in quicklog
  events. May be one of "beginning", "end", or "none".

* Implemented channel logging like logging for private messages (PRIVLOG).
  Channel log is now CHANLOG. "log" in miaurc is now "chanlog".

* Logging finally handles "\1ACTION ...\1"s properly.
